AMP-29691 fix alignment

--- a/amp/TEMPLATE/reampv2/src/modules/sscdashboard/components/layout/filters/filters.css
+++ b/amp/TEMPLATE/reampv2/src/modules/sscdashboard/components/layout/filters/filters.css
@@ -478,7 +478,7 @@
 }
 
 .autocomplete .col-md-3,
-.autocomplete .col-md-3 {
+.autocomplete .col-md-5 {
     padding-left: 0;
     padding-bottom: 20px;
 }
